--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
       </div>
     </main>
 
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
