--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       </div>
     </main>
 
-    <script src="./script.js" defer></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
